--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "ngx-tabs",
+  "name": "aki-ngx-tabs",
   "version": "0.0.13",
-  "description": "Simple tabs control for your angular2 applications using bootstrap3.",
+  "description": "A fork from the original ngx-tabs, with improvements and custom modifications. Thanks to Umed Khudoiberdiev for the original code",
   "license": "MIT",
   "readmeFilename": "README.md",
   "private": true,
   "author": {
-    "name": "Umed Khudoiberdiev",
-    "email": "pleerock.me@gmail.com"
+    "name": "Anton Kirschhock",
+    "email": "anton.kirschhock@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pleerock/ngx-tabs.git"
+    "url": "https://github.com/muziekklas/ngx-tabs.git"
   },
   "bugs": {
-    "url": "https://github.com/pleerock/ngx-tabs/issues"
+    "url": "https://github.com/muziekklas/ngx-tabs/issues"
   },
   "tags": [
     "tabs",
@@ -33,7 +33,6 @@
     "@angular/forms": "^2.4.3",
     "@angular/platform-browser": "^2.4.3",
     "@angular/platform-browser-dynamic": "^2.4.3",
-
     "@types/node": "^7.0.0",
     "bootstrap": "^3.3.7",
     "chai": "^3.4.1",
@@ -61,6 +60,8 @@
     "zone.js": "^0.7.6"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.92",
+    "lodash": "^4.17.4",
     "typescript": "^2.0.10"
   }
 }
